--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
@@ -69,7 +69,9 @@
                          <h:form id="DefinicjalistaplacCreateForm2">
                             <p:outputLabel value="" for="wybranypracownik" />
                             <p:pickList id="wybranypracownik" value="#{pasekwynagrodzenView.listakalendarzmiesiac}" var="kalendarzItem" itemLabel="#{kalendarzItem.angaz.pracownik.nazwiskoImie}" itemValue="#{kalendarzItem}" 
-                                        showCheckbox="true" converter="#{kalendarzmiesiacConverter}" showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains"/>
+                                        showCheckbox="true" converter="#{kalendarzmiesiacConverter}" showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains" 
+                                        showSourceControls="true" showTargetControls="true"
+                                        />
                             <p:panelGrid columns="5" >
                             <p:commandButton styleClass="buttonnorm" actionListener="#{pasekwynagrodzenView.przelicz()}" value="oblicz" update="PasekwynagrodzenListForm DefinicjalistaplacCreateForm2:wybranypracownik" />
                             <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.mailListaPlac}" value="mail" update="PasekwynagrodzenListForm" />
