--- a/kadry/src/main/webapp/kalendarz/sub/kalendarz_firmy.xhtml
+++ b/kadry/src/main/webapp/kalendarz/sub/kalendarz_firmy.xhtml
@@ -43,12 +43,12 @@
                 </h:form>
                 <h:form id="KalendarzwzorCopyForm">
                     <p:outputPanel>
-                        <p:commandButton value="generuj z globalnego" styleClass="nuttonnorm" actionListener="#{kalendarzwzorView.globalnie}" update="akordeon:KalendarzwzormiesiacSaRokForm"/>
+                        <p:commandButton value="generuj z globalnego" styleClass="buttonnorm" actionListener="#{kalendarzwzorView.globalnie}" update="akordeon:KalendarzwzormiesiacSaRokForm"/>
                     </p:outputPanel>
                 </h:form>
                 <h:form id="KalendarzwzorCopyFormTMP">
                     <p:outputPanel>
-                        <p:commandButton value="wygeneruj globalne" styleClass="nuttonnorm" actionListener="#{kalendarzwzorView.taxmannaglobalnie}" update="akordeon:KalendarzwzormiesiacSaRokForm"/>
+                        <p:commandButton value="wygeneruj globalne" styleClass="buttonnorm" actionListener="#{kalendarzwzorView.taxmannaglobalnie}" update="akordeon:KalendarzwzormiesiacSaRokForm"/>
                     </p:outputPanel>
                 </h:form>
             </p:panelGrid>
