--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -111,13 +111,15 @@
         </p:outputPanel>
         <p:outputPanel styleClass="itemNieob">
             <h:form id="NieobecnoscListForm">
-                <p:panelGrid columns="4">
+                <p:panelGrid columns="6">
                     <p:outputLabel value="pokaż wszystkie lata"/>
                     <p:selectBooleanCheckbox value="#{nieobecnoscView.pokazcalyrok}">
                         <p:ajax event="change" listener="#{nieobecnoscView.init()}" partialSubmit="true" update="@form"/>
                     </p:selectBooleanCheckbox>
-                    <h:outputText value="wynagrodzenie za czas choroby płatne od dnia:" style="margin-left: 20px;"/>
+                    <h:outputText value="wynagrodzenie za czas choroby płatne od dnia: " style="margin-left: 20px;"/>
                     <h:outputText value="#{wpisView.umowa.pierwszydzienzasilku}" style="color: green;"/>
+                    <h:outputText value="wypłacono wynagr. za czas choroby za dni: " style="margin-left: 20px;"/>
+                    <h:outputText value="#{nieobecnoscView.dniwykorzystanewroku}" style="color: green;"/>
                 </p:panelGrid>
                 <p:panel header="Lista nieobecności #{wpisView.pracownik.nazwiskoImie}">
                     <p:dataTable id="datalist" value="#{nieobecnoscView.lista}" var="itemNieob" 
