--- a/kadry/src/main/webapp/pracownikaneksy/sub/pracownik_aneksy.xhtml
+++ b/kadry/src/main/webapp/pracownikaneksy/sub/pracownik_aneksy.xhtml
@@ -4,13 +4,14 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
-    >
+        
+    xmlns:bcf="http://brzaskun.com/facelets">
     <p:tabView id="akordeon">
         <p:tab title="czas trwania umowy">
             <p:dataTable id="datalist" value="#{pracownikAneksyView.listaumowy}" var="itemUmowa" rowIndexVar="yndex"
                          selectionMode="single" 
                          rowKey="#{itemUmowa.id}"  sortBy="#{itemUmowa.datado}"
-                         style="height: 550px; overflow-y: scroll;width: 1200px;"
+                         style="height: 550px; overflow-y: scroll;width: 1390px;"
                          rowsPerPageTemplate="20,100,250,500" paginatorPosition="top" paginator="true" rows="20"
                          emptyMessage="Nie pobrano listy"
                          >
@@ -29,7 +30,7 @@
                     </f:facet>
                     <h:outputText value="#{itemUmowa.nazwiskoImie}"/>
                 </p:column>
-                <p:column width="100" >
+                <p:column width="70" >
                     <f:facet name="header">
                         <h:outputText value="rodzaj umowy"/>
                     </f:facet>
@@ -42,17 +43,53 @@
                     </f:facet>
                     <h:outputText value="#{itemUmowa.czastrwania}"/>
                 </p:column>
-                <p:column width="70" style="text-align: center;" sortBy="#{itemUmowa.dataod}" sortOrder="desc">
+                <p:column width="60" style="text-align: center;" sortBy="#{itemUmowa.dataod}" sortOrder="desc">
                     <f:facet name="header">
                         <h:outputText value="data od"/>
                     </f:facet>
                     <h:outputText value="#{itemUmowa.dataod}"/>
                 </p:column>
-                <p:column width="70" style="text-align: center;" sortBy="#{itemUmowa.datado}" sortOrder="desc">
+                <p:column width="60" style="text-align: center;" sortBy="#{itemUmowa.datado}" sortOrder="desc">
                     <f:facet name="header">
                         <h:outputText value="data do"/>
                     </f:facet>
                     <h:outputText value="#{itemUmowa.datado}"/>
+                </p:column>
+                <p:column width="70" >
+                    <f:facet name="header">
+                        <h:outputText value="kwota zas."/>
+                    </f:facet>
+                    <bcf:outputpl value="#{itemUmowa.zmiennaZasadniczego.kwota}"/>
+                </p:column>
+                <p:column width="60"  style="text-align: center;">
+                    <f:facet name="header">
+                        <h:outputText value="data od"/>
+                    </f:facet>
+                    <h:outputText value="#{itemUmowa.zmiennaZasadniczego.dataod}"/>
+                </p:column>
+                <p:column width="60" style="text-align: center;">
+                    <f:facet name="header">
+                        <h:outputText value="data do"/>
+                    </f:facet>
+                    <h:outputText value="#{itemUmowa.zmiennaZasadniczego.datado}"/>
+                </p:column>
+                <p:column width="20" style="text-align: center;">
+                    <f:facet name="header">
+                        <h:outputText value="min."/>
+                    </f:facet>
+                    <h:outputText value="&#x2714;" rendered="#{itemUmowa.zmiennaZasadniczego.minimalneustatowe}" style="color: green;"/>
+                </p:column>
+                <p:column width="70" >
+                    <f:facet name="header">
+                        <h:outputText value="nowa kwota"/>
+                    </f:facet>
+                    <p:inputNumber id="urloplp" value="#{itemUmowa.zmiennaZasadniczego.nowakwota}"  size="14"  maxlength="7" decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
+                </p:column>
+                <p:column width="30" style="text-align: center;">
+                    <f:facet name="header">
+                        <h:outputText value=""/>
+                    </f:facet>
+                    <p:commandButton icon="pi pi-print" actionListener="#{pracownikAneksyView.drukujaneks(itemUmowa.zmiennaZasadniczego)}" global="false"/>
                 </p:column>
             </p:dataTable>
         </p:tab>
