srobne naprawy biurowe

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_analiza.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_analiza.xhtml
@@ -72,6 +72,7 @@
                         <p:spacer width="50"/>
                         <h:outputText value="brutto: "/>
                         <h:outputText value="brutto zus: "/>
+                        <h:outputText value="brutto zus 26lat: "/>
                         <h:outputText value="brutto bez zus: "/>
                         <h:outputText value="składki prac: "/>
                         <h:outputText value="koszt uzyskania: "/>
@@ -84,6 +85,7 @@
                         <p:spacer width="50"/>
                         <bcf:outputpl value="#{pasekwynagrodzenView.wybranykalendarz.getPasek(pasekwynagrodzenView.wybranalistaplac2).brutto}"/>
                         <bcf:outputpl value="#{pasekwynagrodzenView.wybranykalendarz.getPasek(pasekwynagrodzenView.wybranalistaplac2).bruttozus}"/>
+                        <bcf:outputpl value="#{pasekwynagrodzenView.wybranykalendarz.getPasek(pasekwynagrodzenView.wybranalistaplac2).bruttozusbezpodatek}"/>
                         <bcf:outputpl value="#{pasekwynagrodzenView.wybranykalendarz.getPasek(pasekwynagrodzenView.wybranalistaplac2).bruttobezzus}"/>
                         <bcf:outputpl value="#{pasekwynagrodzenView.wybranykalendarz.getPasek(pasekwynagrodzenView.wybranalistaplac2).razemspolecznepracownik}"/>
                         <bcf:outputpl value="#{pasekwynagrodzenView.wybranykalendarz.getPasek(pasekwynagrodzenView.wybranalistaplac2).kosztyuzyskania}"/>
